# UntitledImGuiFramework

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  create-plugin.sh  create-project.sh  elevate.bat  example.gitignore  export.sh  install.sh  shell.nix  update.sh  uvproj.yaml
.github/: CONTRIBUTING.md  FUNDING.yaml  auto-issue-template.md
.github/workflows/: ci.yaml  release.yaml  update-dependencies.yaml
Config/: Icon.icns  Info.plist
Config/Core/: Keybindings.yaml  Modules.yaml  Renderer.yaml  Window.yaml
Config/Resources/: Icon.icns  Info.plist  Info.plist.in  resource.h  resource.rc
Config/Theme/: default.theme.yaml
Config/Translations/: translation-base.yaml  ui18n-config.yaml
Config/WASM/: post.js  pre.js
Framework/: Framework.hpp
Framework/C/: CAllocator.cpp  CAllocator.h  CDefines.h  CTypes.h  README.md  UImGuiCAPI.h
Framework/Core/: Allocator.cpp  Allocator.hpp  CDeallocation.hpp  Core.hpp  Defines.hpp  FrameworkMain.cpp  FrameworkMain.hpp  Global.cpp  Global.hpp  Types.cpp  Types.hpp  Utilities.cpp  Utilities.hpp
Framework/ImGui/: ClientSideBar.cpp  ClientSideBar.hpp  ClientSideBar.mm  ImGui.cpp  ImGui.hpp  UImGuiExtensions.cpp  UImGuiExtensions.hpp
Framework/Modules/: Modules.hpp
Framework/Renderer/: Renderer.cpp  Renderer.hpp  RendererUtils.cpp  RendererUtils.hpp  Texture.cpp  Texture.hpp
Framework/Window/: Window.cpp  Window.hpp  WindowUtils.cpp  WindowUtils.hpp
Framework/cmake/: CompileProject.cmake  FindYamlCpp.cmake  PluginDefaultsInit.cmake  PluginDefaultsPostInst.cmake  SetupCompilation.cmake  (+8 more)
(+174 files in other folders)
